# sovereign-ai-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: ci.yml  nightly.yml  release.yml
api/: auth.py  main.py  ratelimit.py
core/: __init__.py
core/agents/: __init__.py  base.py  factory.py  registry.py
core/models/: __init__.py  azure_openai.py  claude.py  interface.py  qwen.py  router.py  routing_examples.json
core/orchestrator/: __init__.py  main.py  rag_orchestrator.py  task_analyzer.py
core/output/: __init__.py  code_reviewer.py  generation_pipeline.py  models.py  post_processor.py  project_generator.py
core/rag/: __init__.py  embeddings.py  loader.py  pipeline.py  vectorstore.py
core/tools/: __init__.py  code_tools.py  git_tools.py  security_tools.py  testing_tools.py
core/training/: __init__.py  adapter_manager.py  config.py  data_pipeline.py  evaluator.py  trainer.py
core/training/generators/: __init__.py  architect.py  base.py  coder.py  compliance.py  security.py  tester.py
core/utils/: __init__.py  retry.py
data/adapters/: adapter_registry.yaml
data/adapters/fintech_coder/: README.md  latest
data/code_templates/common/: imports_reference.py
data/code_templates/fastapi/: complete_project.py
data/code_templates/fintech/: payment_service.py  wallet_service.py
data/knowledge/fintech/: payment_system_patterns.md  pci_dss_requirements.md  rbi_payment_aggregator_guidelines.md  secure_coding_patterns.md
data/vectordb/: chroma.sqlite3
deployment/docker/: Dockerfile  docker-compose.yaml
deployment/kubernetes/: deployment.yaml
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agents/: layout.tsx  page.tsx
frontend/app/compliance/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/knowledge/: layout.tsx  page.tsx
frontend/components/: navigation.tsx
frontend/lib/: api.ts
frontend/stores/: app-store.ts
scripts/: evaluate_adapters.py  index_code_templates.py  prepare_training_data.py  test_model.py  train_lora.py
tests/: conftest.py  test_fintech_e2e.py  test_rag.py  test_tools.py
tests/contract/: __init__.py  test_api_contracts.py
tests/integration/: test_agent_workflow.py  test_api_endpoints.py  test_compliance_integration.py  test_rag_pipeline.py  test_security_integration.py
tests/unit/: test_agent_base.py  test_agent_factory.py  test_agent_timeout.py  test_auth.py  test_compliance_checker.py  test_compliance_verification.py  test_embeddings.py  test_fintech_roles.py  test_loader.py  test_orchestrator.py  test_qwen_model.py  test_rag_orchestrator.py  test_ratelimit.py  test_regions.py  test_retry.py  test_role_registry.py  test_security_scanner.py  test_vectorstore.py
verticals/fintech/: __init__.py  compliance.py  region.py  roles.py
(+74 files in other folders)
